--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 // Found under Basic Information
-SLACK_CLIENT_ID=745707278183.743710949300
-SLACK_CLIENT_SECRET=cd8cd862b39fff4f1dc51cb757cc2c0e
-SLACK_VERIFICATION_TOKEN=<<TOKEN>>
+SLACK_CLIENT_ID=
+SLACK_CLIENT_SECRET=
+SLACK_VERIFICATION_TOKEN=
 
 // Found under Install App
-SLACK_AUTH_TOKEN=xoxp-745707278183-743847127829-743717735732-5a03cb1d3a3bc765222f4ed9e39907c1
+SLACK_AUTH_TOKEN=
